k8s/02-dashboards.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch-dashboards
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opensearch-dashboards
  template:
    metadata:
      labels:
        app: opensearch-dashboards
    spec:
      containers:
      - name: dashboards
        image: opensearchproject/opensearch-dashboards:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5601
---
apiVersion: v1
kind: Service
metadata:
  name: opensearch-dashboards
spec:
  type: ClusterIP   # Internal only - accessed via Ingress
  selector:
    app: opensearch-dashboards
  ports:
  - port: 5601
    targetPort: 5601
